# hyperfilelens

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: remote-deploy.sh
.github/workflows/: artifact_pipeline.yml  build_and_deploy.yml  deploy_release.yml  deploy_target.yml  production_deploy.yml  release.yml  test.yml
deploy/: docker-compose.yml
deploy/bootstrap/: agent-bootstrap-linux.sh  agent-bootstrap-macos.sh  agent-bootstrap-windows.ps1  gateway-bootstrap-linux.sh  gateway-install-docker-ubuntu-amd64.sh  gateway-install-docker-ubuntu2404-amd64.sh  gateway-install-lensnode-sidecar.sh  gateway-lifecycle.sh
deploy/docker/: backend-entrypoint.sh  backend.Dockerfile  frontend-dev-entrypoint.sh  frontend-logrotate-loop.sh  frontend.Dockerfile
deploy/installer/: apply-runtime-config.py  install.sh
deploy/logrotate/: hyperfilelens.conf
deploy/nginx/: default.conf  development-spa-locations.conf
dev/: Brewfile  bootstrap-macos.sh  sourcelens.sh  stack.sh
release/: build-kopia.sh  build-sourcelens.sh  build.sh
release/ci/: assemble-release.ps1.txt  assemble-release.sh  assemble-release.sh.txt  build-agent-asset.sh  build-host-debs-asset.sh  build-sourcelens-image.sh  certify-agent-candidate.py  export-hfl-images.sh  export-runtime-images.sh  export-sourcelens-bundle.sh  report-release-size.py  verify-agent-certifications.py  verify-host-debs-asset.sh  verify-release.sh  verify-ubuntu-agent-bundle.sh  write-image-metadata.sh  write-sbom.py
src/agent/: go.mod  go.sum
(+1634 files in other folders)
