[project]
name = "hyperfilelens"
version = "0.1.0"
description = "HyperFileLens monorepo (backend/agent/frontend) scaffold."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "HyperFileLens" }]
dependencies = [
  "django==5.1.4",
  "djangorestframework==3.15.2",
  "drf-spectacular==0.28.0",
  "djangorestframework-simplejwt==5.3.1",
  "dj-rest-auth==7.0.0",
  "django-allauth>=0.61.0",
  "django-cors-headers==4.7.0",
  "djangorestframework-camel-case==1.4.2",
  "sentry-sdk==2.35.0",
  "prometheus-client==0.22.1",
  "channels==4.1.0",
  "channels-redis==4.2.0",
  "cryptography>=42.0.0",
  "daphne>=4.1.0",
  "gunicorn>=22.0.0",
  "requests>=2.32.0",
  "boto3>=1.34.0",
  "uvicorn>=0.30.0",
  "celery==5.3.6",
  "django-celery-beat==2.7.0",
  "django-celery-results==2.5.1",
  "kombu==5.5.4",
  "redis",
  "dj-database-url==2.3.0",
  "psycopg2-binary==2.9.9",
  "Pillow>=10.0.0",
  "psutil>=5.9.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "watchfiles==1.1.1",
]

[tool.setuptools]
package-dir = {"" = "src/backend"}

[tool.setuptools.packages.find]
where = ["src/backend"]
include = ["project*", "common*", "apps*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
